--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title></title>
+    <title>Odin Recipes</title>
 </head>
 
 <body>
-    
+    <h1>Odin Recipes</h1>
+
+    <a href="./recipes/lasagna.html">Lasagna</a>
 </body>
 </html>
