--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -4,4 +4,29 @@
         <meta charset="UTF-8">
         <title>Odin Recipes - Lasagna</title>
     </head>
+    <body>
+        <h1>Lasagna</h1>
+        <img src="../img/lasagna.jpeg" alt="A delicious lasagna">
+        <h2>Description</h2>
+        <p>This classic lasagna is made with an easy meat sauce as the base. 
+            Layer the sauce with noodles and cheese, then bake until bubbly! 
+            This is great for feeding a big family, and freezes well, too.</p>
+        <p>What is posted here will easily serve eight people.</p>
+        <h2>Ingredients</h2>
+        <ul>
+            <li>Enough lasagna sheets</li>
+            <li>Plenty of pasta sauce</li>
+            <li>Mince meat</li>
+            <li>Hearty amount of cheese</li>
+            <li>Salt to taste</li>
+        </ul>
+        <h2>Steps</h2>
+        <ol>
+            <li>Boil lasagna sheets</li>
+            <li>Cook mince meat</li>
+            <li>Add sauce to mince meat</li>
+            <li>Assemble the lasagna and put cheese on top</li>
+            <li>Cook it in the oven</li>
+        </ol>
+    </body>
 </html>
