--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <ul>
         <li><a href="./recipes/lasagna.html">Lasagna</a></li>
         <li><a href="./recipes/potato-salad.html">Potato Salad</a></li>
-        <li></li>
+        <li><a href="./recipes/chicken-wings.html">Baked Chicken Wings</a></li>
     </ul>
     
 </body>
